tests/snapshots/transform__auto_workletize_useAnimatedStyle.snap
---
source: tests/transform.rs
expression: output
---
import { useAnimatedStyle } from "react-native-reanimated";
const _worklet_5988096228524_init_data = {
	code: "(function null1(){return{opacity:1};})",
	location: "/dev/null",
	sourceMap: "{\"version\":3,\"sources\":[\"/dev/null\"],\"names\":[],\"mappings\":\"AAAA,CAAC,SAAS,QAAQ,MAAM,CAAC,QAAQ,CAAC,EAAC,CAAC\"}"
};
const style = useAnimatedStyle(function null1Factory({ _worklet_5988096228524_init_data }) {
	const _e = [
		new global.Error(),
		1,
		-27
	];
	const null1 = function() {
		return { opacity: 1 };
	};
	null1.__closure = {};
	null1.__workletHash = 5988096228524;
	null1.__pluginVersion = "x.y.z";
	null1.__initData = _worklet_5988096228524_init_data;
	null1.__stackDetails = _e;
	return null1;
}({ _worklet_5988096228524_init_data }));
