tests/snapshots/transform__context_object_creates_factory.snap
---
source: tests/transform.rs
expression: output
---
const _worklet_14294829041264_init_data = {
	code: "(function null1(){return{bar:function(){return\"bar\";}};})",
	location: "/dev/null",
	sourceMap: "{\"version\":3,\"names\":[],\"sources\":[\"/dev/null\"],\"sourcesContent\":[\"(function null1(){return{bar(){return`bar`}}});\"],\"mappings\":\"CAAC,SAAS,OAAO,CAAC,MAAM,CAAC,KAAK,CAAC,MAAM,OAAO\"}"
};
const foo = {
	bar() {
		return "bar";
	},
	__workletContextObjectFactory: function null1Factory({ _worklet_14294829041264_init_data }) {
		const _e = [
			new global.Error(),
			1,
			-27
		];
		const null1 = function() {
			return { bar() {
				return "bar";
			} };
		};
		null1.__closure = {};
		null1.__workletHash = 0xd0046350670;
		null1.__pluginVersion = "x.y.z";
		null1.__initData = _worklet_14294829041264_init_data;
		null1.__stackDetails = _e;
		return null1;
	}({ _worklet_14294829041264_init_data })
};
