tests/snapshots/transform__context_object_preserves_bindings.snap
---
source: tests/transform.rs
expression: output
---
const _worklet_3398160569533_init_data = {
	code: "(function null1(){return{bar:function(){return\"bar\";},foobar:function(){return this.bar();}};})",
	location: "/dev/null",
	sourceMap: "{\"version\":3,\"sources\":[\"/dev/null\"],\"names\":[],\"mappings\":\"AAAA,CAAC,SAAS,QAAQ,MAAM,CAAC,IAAA,WAAM,MAAM,MAAK,EAAE,OAAA,WAAS,OAAO,IAAI,CAAC,GAAG,GAAE,CAAC,EAAC,CAAC\"}"
};
const foo = {
	bar() {
		return "bar";
	},
	foobar() {
		return this.bar();
	},
	__workletContextObjectFactory: function null1Factory({ _worklet_3398160569533_init_data }) {
		const _e = [
			new global.Error(),
			1,
			-27
		];
		const null1 = function() {
			return {
				bar() {
					return "bar";
				},
				foobar() {
					return this.bar();
				}
			};
		};
		null1.__closure = {};
		null1.__workletHash = 3398160569533;
		null1.__pluginVersion = "x.y.z";
		null1.__initData = _worklet_3398160569533_init_data;
		null1.__stackDetails = _e;
		return null1;
	}({ _worklet_3398160569533_init_data })
};
