tests/snapshots/transform__context_object_removes_marker.snap
---
source: tests/transform.rs
expression: output
---
const _worklet_14294829041264_init_data = {
	code: "(function null1(){return{bar:function(){return\"bar\";}};})",
	location: "/dev/null",
	sourceMap: "{\"version\":3,\"sources\":[\"/dev/null\"],\"names\":[],\"mappings\":\"AAAA,CAAC,SAAS,QAAQ,MAAM,CAAC,IAAA,WAAM,MAAM,MAAK,CAAC,EAAC,CAAC\"}"
};
const foo = {
	bar() {
		return "bar";
	},
	__workletContextObjectFactory: function null1Factory({ _worklet_14294829041264_init_data }) {
		const _e = [
			new global.Error(),
			1,
			-27
		];
		const null1 = function() {
			return { bar() {
				return "bar";
			} };
		};
		null1.__closure = {};
		null1.__workletHash = 0xd0046350670;
		null1.__pluginVersion = "x.y.z";
		null1.__initData = _worklet_14294829041264_init_data;
		null1.__stackDetails = _e;
		return null1;
	}({ _worklet_14294829041264_init_data })
};
