tests/snapshots/transform__export_default_worklet.snap
---
source: tests/transform.rs
expression: output
---
const _worklet_1397870550576_init_data = {
	code: "(function foo_null1(){return 1;})",
	location: "/dev/null",
	sourceMap: "{\"version\":3,\"names\":[],\"sources\":[\"/dev/null\"],\"sourcesContent\":[\"(function foo_null1(){return 1});\"],\"mappings\":\"CAAC,SAAS,WAAW,CAAC,MAAO\"}"
};
export default (function foo_null1Factory({ _worklet_1397870550576_init_data }) {
	const _e = [
		new global.Error(),
		1,
		-27
	];
	const foo = function() {
		return 1;
	};
	foo.__closure = {};
	foo.__workletHash = 1397870550576;
	foo.__pluginVersion = "x.y.z";
	foo.__initData = _worklet_1397870550576_init_data;
	foo.__stackDetails = _e;
	return foo;
})({ _worklet_1397870550576_init_data });
