tests/snapshots/transform__export_named_worklet.snap
---
source: tests/transform.rs
expression: output
---
const _worklet_7407244038443_init_data = {
	code: "(function foo_null1(){return 1})",
	location: "/dev/null"
};
export const foo = function foo_null1Factory({ _worklet_7407244038443_init_data }) {
	const _e = [
		new global.Error(),
		1,
		-27
	];
	const foo = function() {
		return 1;
	};
	foo.__closure = {};
	foo.__workletHash = 7407244038443;
	foo.__pluginVersion = "x.y.z";
	foo.__initData = _worklet_7407244038443_init_data;
	foo.__stackDetails = _e;
	return foo;
}({ _worklet_7407244038443_init_data });
