tests/snapshots/transform__file_level_worklet.snap
---
source: tests/transform.rs
expression: output
---
const _worklet_7407244038443_init_data = {
	code: "(function foo_null1(){return 1})",
	location: "/dev/null"
};
const foo = function foo_null1Factory({ _worklet_7407244038443_init_data }) {
	const _e = [
		new global.Error(),
		1,
		-27
	];
	const foo = function() {
		return 1;
	};
	foo.__closure = {};
	foo.__workletHash = 7407244038443;
	foo.__pluginVersion = "x.y.z";
	foo.__initData = _worklet_7407244038443_init_data;
	foo.__stackDetails = _e;
	return foo;
}({ _worklet_7407244038443_init_data });
const _worklet_15445050012316_init_data = {
	code: "(function bar_null2(){return 2})",
	location: "/dev/null"
};
const bar = function bar_null2Factory({ _worklet_15445050012316_init_data }) {
	const _e = [
		new global.Error(),
		1,
		-27
	];
	const bar = function() {
		return 2;
	};
	bar.__closure = {};
	bar.__workletHash = 0xe0c14b8329c;
	bar.__pluginVersion = "x.y.z";
	bar.__initData = _worklet_15445050012316_init_data;
	bar.__stackDetails = _e;
	return bar;
}({ _worklet_15445050012316_init_data });
